syntax = "proto3"; // 指定proto版本

package protobuf;

service OrderService {
rpc SelectById(QueryId)  returns (OrderReq);



}

message OrderReq {
        int64 id = 1;
        string created_at = 2;
        string updated_at = 3;
        string deleted_at = 4;
        string order_no = 5;
        string user_name = 6;
        double amount = 7;
        string status = 8;
        string file_url = 9;
}
message QueryId {
    uint64 id=1;
}


